--- a/grid.css
+++ b/grid.css
@@ -32,7 +32,97 @@
   box-shadow: 5px 5px 5px #ccc;
   border-radius: 40px;
 }
+
 .big-card img {
   width: 100%;
   border-radius: 40px;
 }
+
+.panel {
+  float: left;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  position: relative;
+  font-size: .8em;
+
+  -webkit-perspective: 600px;
+          perspective: 600px;
+}
+/* -- make sure to declare a default for every property that you want animated -- */
+/* -- general styles, including Y axis rotation -- */
+.panel .front {
+  float: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 900;
+  width: inherit;
+  height: inherit;
+  border: 0px;
+  background: none;
+  text-align: center;
+  box-shadow: 0;
+
+  -webkit-transform: rotateX(0) rotateY(0);
+          transform: rotateX(0) rotateY(0);
+
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+
+  /* -- transition is the magic sauce for animation -- */
+  -webkit-transition: all .4s ease-in-out;
+          transition: all .4s ease-in-out;
+}
+.panel.flip .front {
+  z-index: 900;
+  border:0px;
+  background: none;
+  box-shadow: 0 ;
+
+  -webkit-transform: rotateY(179deg);
+          transform: rotateY(179deg);
+}
+
+.panel .back {
+  float: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 800;
+  width: inherit;
+  height: inherit;
+  border: 0;
+  background: none;
+  text-shadow: 0;
+
+  -webkit-transform: rotateY(-179deg);
+          transform: rotateY(-179deg);
+
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+
+  /* -- transition is the magic sauce for animation -- */
+  -webkit-transition: all .4s ease-in-out;
+          transition: all .4s ease-in-out;
+}
+
+.panel.flip .back {
+  z-index: 1000;
+  background: none;
+
+  -webkit-transform: rotateX(0) rotateY(0);
+          transform: rotateX(0) rotateY(0);
+
+  box-shadow: 0 ;
+}
+
+/* -- cosmetics -- */
+.panel .pad { }
+.panel.flip .action {display: none; }
